Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16334

Incorrect ALTER TABLE for changing column option

    XMLWordPrintable

Details

    Description

      A code refactoring accidentally changed ALTER_COLUMN_OPTION and ALTER_COLUMN_STORAGE_TYPE to be separate flags. InnoDB and Mroonga are only checking for the latter; the example storage engine is checking for the former only.

      The impact of this bug should be incorrect operation of Mroonga when the column options GROONGA_TYPE, FLAGS are changed.

      InnoDB does not define any column options, only table options, so the flag ALTER_COLUMN_OPTION should never be set.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.